- better smart placement (Gabor Melis <gabor.melis@essnet.se>)
- replaced old linkedlist code with WMBag
- fixed wmsetbg to use right bg color with transparent background images
- fixed crash with Assertion "bad_root_window" && 0' failed. on startup
- fixed crash when more than 1 dockapp fails to launch on startup
- added a different dock setup config for each screen size


Changes since version 0.53.0:
.............................

- fixed a bug that caused icon overlaping in Clip, when icon was moved around.
- this time really added libwmfun to distribution.
- made deiconification not automatically focus window in sloppy focus
- fixed crash with DisableMiniwindows and icon pixmap changes
- fixed crash when changing icon of window without WM_CLASS
- added hysteresys for offscreen menu scrollback
- fixed bug with IgnoreFocusClick
- fixed crash with windows with width == 1 (Alban Hertroys 
					<dalroi@wit401310.student.utwente.nl>)
- added SHEXEC command
- fixed resizebarback for SHADOW_RESIZEBAR ( jim knoble jmknoble@pobox.com)
- added balloon help everywhere
- fixed bug with FullMaximize attribute
- GNOME: button events not bound in wmaker are proxyized (to gmc)
				(Paul Warren <pdw@ferret.lmh.ox.ac.uk>)
- fixed bug with restoration of maximized window after restart with
  --enable-kde
- added high-quality filtered rescaling (smoothed rescaling) to wrlib/wmsetbg
- added SmoothWorkspaceBack
- fixed crash bug in Paths section of WPrefs
- optimized image rendering for 15/16 bpp
- user menus' paths were changed. See NEWS.
- added a timeout for the workspace name fading
- HP-UX compiler compatibility workarounds (Sebastien Bauer
						seb_bauer@bigfoot.com)
- fixed crash with attributes panel
- save state of all menus when exiting (Sebastien Bauer
						seb_bauer@bigfoot.com)
- added GNUstep info panel (still needs beautification..)
- made the paths selector in WPrefs.app use the open file panel
- fixed crash bug with hiding apps without dock/clip