@@ -143,7 +143,7 @@ Fix for unassociated alpha tiff
 Craig Nellist <crn@ozemail.com.au>
 selection in textfield
 
-Dan Pascu <dan@services.iiruc.ro>
+Dan Pascu <dan@windowmaker.org>
 dock ghost (superfluous mode) fix, enhancement for scrollable menus,
 clip, numerous other stuff, project maintainer
 
