@@ -20,4 +20,3 @@
 
 - mysterious crash with WM_COLORMAP_WINDOWS
 - mysterious mess in dock icons (specially netscape)
-- PPosition handling
