@@ -45,7 +45,7 @@ testcolorpanel_LDADD = libWINGs.a $(LIBLIST)
 
 testnot_SOURCES = testnot.c
 
-testnot_LDADD = libWINGs.a $(LIBLIST)
+testnot_LDADD = libWUtil.a @LIBPL@
 
 
 wmquery_SOURCES = wmquery.c 
